--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# POM_ARTIFACT should be defined in each submodule separately
+#POM_ARTIFACT_ID=spdelegates
+POM_GROUP_ID=io.github.antimonit
+POM_VERSION=1.0.0
