--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,15 @@
 [versions]
 kotlin = "1.9.10"
 moshi = "1.15.0"
+mockk = "1.13.2"
 
 [libraries]
 junit = { module = "junit:junit", version = "4.13.2" }
 strikt = { module = "io.strikt:strikt-core", version = "0.34.1" }
 robolectric = { module = "org.robolectric:robolectric", version = "4.10.3" }
 androidx-test-junit = { module = "androidx.test.ext:junit", version = "1.1.5" }
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockk" }
+mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockk" }
 
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
