--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/openjdk:11.0.17
+      - image: cimg/android:2022.09.2
     working_directory: ~/repo/shared-preferences-delegates
     environment:
       JVM_OPTS: -Xmx3200m
