--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,4 +16,5 @@ kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-
 plugin-android = { module = "com.android.tools.build:gradle", version = "7.3.0" }
 plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 plugin-kotlin-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
+plugin-kover = { module = "org.jetbrains.kotlinx:kover-gradle-plugin", version = "0.7.3" }
 plugin-maven-publish = { module = "com.vanniktech:gradle-maven-publish-plugin", version = "0.22.0" }
