Replace kapt with ksp

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,3 +18,6 @@ plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.
 plugin-kotlin-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
 plugin-kover = { module = "org.jetbrains.kotlinx:kover-gradle-plugin", version = "0.7.6" }
 plugin-maven-publish = { module = "com.vanniktech:gradle-maven-publish-plugin", version = "0.28.0" }
+
+[plugins]
+ksp = { id = "com.google.devtools.ksp", version = "2.0.0-1.0.21" }
