--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     docker:
       - image: cimg/android:2026.02
+    resource_class: medium
     working_directory: ~/repo/shared-preferences-delegates
     environment:
       JVM_OPTS: -Xmx3200m
